# seeb

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  config.json  see-config.json  vcpkg.json
hello-world/: main.cpp
hello-world/src/: temp.cpp
hello-world/src/ano/: ano.cpp
res/: config.h.in
src/: main.cpp  main.cxx  setting.hpp
